<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.herokuapp.nextbeerback.nextbeer.SignIn"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/alert_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/red_alert"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/alert_sign_in"
        android:textAlignment="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="#fff"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="80sp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@id/app_name"
        android:background="@drawable/edit_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="10dp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/username_input"
        android:background="@drawable/edit_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"
        android:layout_below="@id/password_input"
        android:padding="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button"
        android:text="@string/sign_up_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:onClick="signUp"
        android:textColor="@color/colorAccent"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/sign_in_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Loading..."
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:background="#bbffffff"
        android:visibility="invisible"/>

</RelativeLayout>
