<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questionnaire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.herokuapp.nextbeerback.nextbeer.Questionnaire"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question1"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question1Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question2"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question2Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question3"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question3Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question4"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question4Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question5"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question5Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question6"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question6Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question7"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question7"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question7Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question8"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question8"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question8Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question9"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question9"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question9Val"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question10"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question10"
                android:layout_weight=".7"
                android:max="10"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="0"
                android:id="@+id/question10Val"/>
        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="completeSignUp"
            android:padding="10dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button"/>

    </LinearLayout>

</ScrollView>
